Fix long content clipping out

--- a/inner_air/dev/scss/base.scss
+++ b/inner_air/dev/scss/base.scss
@@ -9,7 +9,6 @@ body {
     color: $light-white;
     font-size: 14px;
     padding-top: $header-heigh;
-    height: 100vh;
 
     .container {
         margin: auto;
@@ -17,5 +16,6 @@ body {
         height: 100vh;
         background-color: $dark-steel;
         background-image: linear-gradient(0deg ,$dark-steel 85%, $tinted-azure 99%);
+        height: auto;
     }
 }
